# micro-machines-2

./: CMakeLists.txt  Meeting-notes.md  README.md
doc/: Last Meeting.md  Meeting Notes Sprint 2 First Week.md  Meeting Notes Sprint 3 First Week.md  Meeting Notes Sprint 3 Second Week copy.md  Meeting Notes Sprint 4 Second Week.md  Meeting-notes Sprint 1.md  Meetings Notes Sprint 2  Meetings Notes Sprint 2 Second Week.md  Project_Documentation.md  Sprint 4 First Week.md
images/: background.png:Zone.Identifier
libs/SFML/extlibs/headers/miniaudio/: miniaudio.h:Zone.Identifier
libs/SFML/include/SFML/Audio/: SoundBuffer.hpp:Zone.Identifier
libs/SFML/include/SFML/Graphics/: ConvexShape.hpp:Zone.Identifier
libs/box2d/benchmark/: CMakeLists.txt:Zone.Identifier
plan/: README.md  plan.txt
src/: Car.cpp  Car.hpp  Game.cpp  Game.hpp  MainMenu.cpp  MainMenu.hpp  OptionsMenu.cpp  OptionsMenu.hpp  PlayMenu.cpp  PlayMenu.hpp  SoundManager.cpp  SoundManager.hpp  main.cpp  mapBoudaries.cpp  mapBoudaries.hpp
tests/: carTest  gameTest  mainMenuTest.cpp  optionsMenuTest.cpp  soundManagerTest.cpp
